# Python-Neural-Network

./: .gitignore  Makefile  pyproject.toml
neural_network/: __init__.py
neural_network/classes/: Layer.py  Network.py  NetworkFormat.py  Node.py  NodeChange.py  Path.py  __init__.py
neural_network/functions/: utils.py
neural_network/functions/activation/: sigmoid.py
neural_network/functions/loss/: mse.py
neural_network/scripts/: tests.py  tryout.py
neural_network/test/: node.test.py
neural_network/tests/: __init__.py  added_test.py  test_layer.py  test_network.py  test_network_format.py  test_node.py  test_node_change.py
python-neural-network/classes/: Layer.py  Network.py  Node.py
python-neural-network/functions/: sigmoid.py
python-neural-network/scripts/: tests.py
src/: Node.py
